Avoid text wrapping concept name.

--- a/iXBRLViewerPlugin/viewer/src/less/inspector.less
+++ b/iXBRLViewerPlugin/viewer/src/less/inspector.less
@@ -708,6 +708,10 @@
       }
     }
 
+    .concept td {
+        white-space: nowrap;
+    }
+
     .documentation {
       margin-top: 10px;
       margin-left: 30px;
